Seg fault at HMAC keys background thread during rollback

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.7.3
    • Affects Version/s: 3.7.2
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2018-03-12
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      d20263| 2018-02-21T10:11:07.130+0000 F -        [monitoring keys for HMAC] Got signal: 11 (Segmentation fault).
      d20263|  0x275bb810 0x275ba634 0x275bae98 0x3fff85650478 0x26f1bab8 0x26f16210 0x26f1977c 0x26f1a7cc 0x276fea24 0x3fff84858944 0x3fff84787640
      d20263| ----- BEGIN BACKTRACE -----
      d20263| {"backtrace":[{"b":"24C90000","o":"292B810","s":"_ZN5mongo15printStackTraceERSo"},{"b":"24C90000","o":"292A634"},{"b":"24C90000","o":"292AE98"},{"b":"3FFF85650000","o":"478","s":"__kernel_sigtramp_rt64"},{"b":"24C90000","o":"228BAB8","s":"_ZN5mongo19KeysCollectionCache7refreshEPNS_16OperationContextE"},{"b":"24C90000","o":"2286210"},{"b":"24C90000","o":"228977C","s":"_ZN5mongo21KeysCollectionManager14PeriodicRunner18_doPeriodicRefreshEPNS_14ServiceContextENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEENS_8DurationISt5ratioILl1ELl1000EEEE"},{"b":"24C90000","o":"228A7CC"},{"b":"24C90000","o":"2A6EA24"},{"b":"3FFF84850000","o":"8944"},{"b":"3FFF84670000","o":"117640","s":"clone"}],"processInfo":{ "mongodbVersion" : "3.7.2-113-g232c772", "gitVersion" : "232c772546f26bcb5a5556d859e56002a4135f0b", "compiledModules" : [ "enterprise" ], "uname" : { "sysname" : "Linux", "release" : "3.10.0-229.ael7b.ppc64le", "version" : "#1 SMP Fri Jan 30 12:03:50 EST 2015", "machine" : "ppc64le" }, "somap" : [ { "b" : "24C90000", "elfType" : 3, "buildId" : "571FF9057429119A7E8710AE8E8760B4F0DD5BCF" }, { "b" : "3FFF85650000", "elfType" : 3, "buildId" : "179B6FB935AA023578009C7C3C0B7F09BC50ACB9" }, { "b" : "3FFF85310000", "path" : "/lib64/libnetsnmpmibs.so.31", "elfType" : 3, "buildId" : "ED5B3DACDB1C89AAD56DCCC28E56D547B1BA79CD" }, { "b" : "3FFF852E0000", "path" : "/lib64/libsensors.so.4", "elfType" : 3, "buildId" : "8D1FADE0D56540352C0C0F4CE308D96BA3F85E70" }, { "b" : "3FFF852B0000", "path" : "/lib64/libdl.so.2", "elfType" : 3, "buildId" : "57734949376D241AF73F054863FB53E1F93D222D" }, { "b" : "3FFF85210000", "path" : "/lib64/librpm.so.3", "elfType" : 3, "buildId" : "13C0FC9BB78549D8B7849AFFEF78B1C7C9795C9F" }, { "b" : "3FFF851B0000", "path" : "/lib64/librpmio.so.3", "elfType" : 3, "buildId" : "8327016318024432B934A0FC928DDCECE10312E9" }, { "b" : "3FFF85100000", "path" : "/lib64/libnetsnmpagent.so.31", "elfType" : 3, "buildId" : "7101FE545A10E550BEC342129449705A1A728804" }, { "b" : "3FFF850D0000", "path" : "/lib64/libwrap.so.0", "elfType" : 3, "buildId" : "F5F1A860B171505B7A8E2AFDEFB3325E8E66231B" }, { "b" : "3FFF84F80000", "path" : "/lib64/libnetsnmp.so.31", "elfType" : 3, "buildId" : "516868CBB10374155A384239D1A189CD248A1743" }, { "b" : "3FFF84EE0000", "path" : "/lib64/libssl.so.10", "elfType" : 3, "buildId" : "E46B75B46C31B1E307D0C04DE48C42E91BBF6219" }, { "b" : "3FFF84C60000", "path" : "/lib64/libcrypto.so.10", "elfType" : 3, "buildId" : "AB6F9785D492FDF0F4A2AC06C7D08DA8889E0C36" }, { "b" : "3FFF84BE0000", "path" : "/lib64/libldap-2.4.so.2", "elfType" : 3, "buildId" : "05EEB4AD5E86B9B75EA521B67F6BD98EC5B1896B" }, { "b" : "3FFF84BA0000", "path" : "/lib64/liblber-2.4.so.2", "elfType" : 3, "buildId" : "ED908B8E82E86713B780510C94F37E8D0DA97D05" }, { "b" : "3FFF84B50000", "path" : "/lib64/libsasl2.so.3", "elfType" : 3, "buildId" : "2559B3B52A1555DD3CB244ABB24C0F2A9C08B366" }, { "b" : "3FFF84AD0000", "path" : "/lib64/libgssapi_krb5.so.2", "elfType" : 3, "buildId" : "3CDBA9444A5FC8958F5749ACF83E8B51DA626FBF" }, { "b" : "3FFF84A30000", "path" : "/lib64/libcurl.so.4", "elfType" : 3, "buildId" : "14C8AB9A091E411AF9491BB684EB098BB95DA3BD" }, { "b" : "3FFF84940000", "path" : "/lib64/power8/libm.so.6", "elfType" : 3, "buildId" : "0CAADB7D836B16CDD176833A0DAE38764E28006F" }, { "b" : "3FFF84900000", "path" : "/lib64/libresolv.so.2", "elfType" : 3, "buildId" : "8EE9D450F181F791C2FB0C30DE3112E7BEF26E3A" }, { "b" : "3FFF848D0000", "path" : "/lib64/power8/librt.so.1", "elfType" : 3, "buildId" : "626D07527A63941827A52A38E928E1C6807D3821" }, { "b" : "3FFF84890000", "path" : "/lib64/libgcc_s.so.1", "elfType" : 3, "buildId" : "4E2CAE4975DA8B74EA3059838BDD2ED50EA5EB2A" }, { "b" : "3FFF84850000", "path" : "/lib64/power8/libpthread.so.0", "elfType" : 3, "buildId" : "4C0A14BCEE88F2C83BC28A4ADF87DD3A74AD853F" }, { "b" : "3FFF84670000", "path" : "/lib64/power8/libc.so.6", "elfType" : 3, "buildId" : "552EC71564694CA8066C907BD54328EE0C250BCF" }, { "b" : "3FFF85670000", "path" : "/lib64/ld64.so.2", "elfType" : 3, "buildId" : "9F622117176D7D51DC0F827E25352994B88A5489" }, { "b" : "3FFF84490000", "path" : "/usr/lib64/perl5/CORE/libperl.so", "elfType" : 3, "buildId" : "3492ABDF2D261697617C5A2E20EAC78F0433FA24" }, { "b" : "3FFF84450000", "path" : "/lib64/libnsl.so.1", "elfType" : 3, "buildId" : "6B2BF9B1B99F8A27C3DDEA4905D5AD5706232491" }, { "b" : "3FFF84400000", "path" : "/lib64/libcrypt.so.1", "elfType" : 3, "buildId" : "97AC40E63A13D4E5404A75A66C57C4F63B7A3425" }, { "b" : "3FFF843D0000", "path" : "/lib64/libutil.so.1", "elfType" : 3, "buildId" : "A06F2B58CA09E0BF147841CBB1673F8A4227E5B4" }, { "b" : "3FFF84260000", "path" : "/lib64/libnss3.so", "elfType" : 3, "buildId" : "1234C2DCDF1F557323AEE4C0FB67EE39AFE796FD" }, { "b" : "3FFF84220000", "path" : "/lib64/libbz2.so.1", "elfType" : 3, "buildId" : "16DDE2253C5115465E86C884D5A3E6A6A9D47133" }, { "b" : "3FFF841E0000", "path" : "/lib64/libz.so.1", "elfType" : 3, "buildId" : "39B56D8C7ACB8559B96CA80488A0CC5D60E5215F" }, { "b" : "3FFF841A0000", "path" : "/lib64/libelf.so.1", "elfType" : 3, "buildId" : "AB56674789921A58C89401ABFFA80A6DF0B38114" }, { "b" : "3FFF84140000", "path" : "/lib64/liblzma.so.5", "elfType" : 3, "buildId" : "A6A50FDF1BC1473396EEA9135234D1093E5F8F3A" }, { "b" : "3FFF84110000", "path" : "/lib64/libpopt.so.0", "elfType" : 3, "buildId" : "60B618082A24CD52235B29E542B374F68EB35C9E" }, { "b" : "3FFF840C0000", "path" : "/lib64/libselinux.so.1", "elfType" : 3, "buildId" : "0157498135739C8EC8A44CB911D45784BEEF66F0" }, { "b" : "3FFF84090000", "path" : "/lib64/libcap.so.2", "elfType" : 3, "buildId" : "FDD9669E60A5F4BB9A0D4AAD8FEACE1729003CCB" }, { "b" : "3FFF84060000", "path" : "/lib64/libacl.so.1", "elfType" : 3, "buildId" : "D95B880186196B51D0A5A28D0A9223F2D9873BEB" }, { "b" : "3FFF84000000", "path" : "/lib64/liblua-5.1.so", "elfType" : 3, "buildId" : "1A0DEC8FB9A2DA209A417A8B36105ECFB4C7D33D" }, { "b" : "3FFF83DF0000", "path" : "/lib64/libdb-5.3.so", "elfType" : 3, "buildId" : "9C3A59FEA55DE5E3F95C04CAC7A282E4EB1E0054" }, { "b" : "3FFF83CD0000", "path" : "/lib64/libkrb5.so.3", "elfType" : 3, "buildId" : "D5C531B4F180EACDA6E668517C9C91C2E386B51D" }, { "b" : "3FFF83CA0000", "path" : "/lib64/libcom_err.so.2", "elfType" : 3, "buildId" : "D3778E197923CB441680BF2B0D4BD3FA51CF4B38" }, { "b" : "3FFF83C40000", "path" : "/lib64/libk5crypto.so.3", "elfType" : 3, "buildId" : "C9B3E6C2792B6244EF254D26AC44E5E841AD5CA0" }, { "b" : "3FFF83BD0000", "path" : "/lib64/libssl3.so", "elfType" : 3, "buildId" : "D3CBBEDBC9DF63CA65D0B8B12F4B0BC976D6CE85" }, { "b" : "3FFF83B80000", "path" : "/lib64/libsmime3.so", "elfType" : 3, "buildId" : "A83A402F0A837208D902E39B6C44553CA8F7AB4E" }, { "b" : "3FFF83B30000", "path" : "/lib64/libnssutil3.so", "elfType" : 3, "buildId" : "6DD91C9CE7F3DCB9F645DAC9F7168AA98BA8A02C" }, { "b" : "3FFF83B00000", "path" : "/lib64/libplds4.so", "elfType" : 3, "buildId" : "DF9C0858239E9C1392E06EDFE51D7157D8B15E28" }, { "b" : "3FFF83AC0000", "path" : "/lib64/libplc4.so", "elfType" : 3, "buildId" : "5D6543626FB80A4C7FBEB00B6D6BD974765F7DAC" }, { "b" : "3FFF83A50000", "path" : "/lib64/libnspr4.so", "elfType" : 3, "buildId" : "7A288DEC556CD0809ED0B0CCB431DF6720B863CE" }, { "b" : "3FFF83A20000", "path" : "/lib64/libkrb5support.so.0", "elfType" : 3, "buildId" : "0F1B10767A26EFDE3F342985BA62BF06D83845DF" }, { "b" : "3FFF839F0000", "path" : "/lib64/libkeyutils.so.1", "elfType" : 3, "buildId" : "A1142DE6F702C5B8DA7B0213B1147C8442EF6CD0" }, { "b" : "3FFF83990000", "path" : "/lib64/libidn.so.11", "elfType" : 3, "buildId" : "F5478CCFB5C18355814D7A0D46E732117DE3506B" }, { "b" : "3FFF83930000", "path" : "/lib64/libssh2.so.1", "elfType" : 3, "buildId" : "B8881677E2B40446F81DEFD84B9F38389AAE2DF1" }, { "b" : "3FFF83900000", "path" : "/lib64/libfreebl3.so", "elfType" : 3, "buildId" : "3ED3AA68D17E0CE1C1AA874FFB630D60DF563D7E" }, { "b" : "3FFF83890000", "path" : "/lib64/libpcre.so.1", "elfType" : 3, "buildId" : "98C137242BC1780C52C3631508B28018CCF1FD33" }, { "b" : "3FFF83860000", "path" : "/lib64/libattr.so.1", "elfType" : 3, "buildId" : "5321621DC83CD8C8A066A012ADFF4678A6816AB7" }, { "b" : "3FFF83820000", "path" : "/usr/lib64/sasl2/libanonymous.so", "elfType" : 3, "buildId" : "C4D86A58CEC0910934377435AA91187E6D66DCE2" }, { "b" : "3FFF837F0000", "path" : "/usr/lib64/sasl2/libsasldb.so", "elfType" : 3, "buildId" : "E9CB120093CC7416956B96E9944299064E232305" }, { "b" : "3FFF837C0000", "path" : "/usr/lib64/sasl2/libcrammd5.so", "elfType" : 3, "buildId" : "60F7F0C3879A01B1E376AFFB4A1265F7BCABE1EC" }, { "b" : "3FFF83780000", "path" : "/usr/lib64/sasl2/libdigestmd5.so", "elfType" : 3, "buildId" : "39A6314637C827228933C88E865ED4571485200E" }, { "b" : "3FFF83750000", "path" : "/usr/lib64/sasl2/libgssapiv2.so", "elfType" : 3, "buildId" : "F820155B37B4BF2CFE09C9CED9122FBB6A4A4F5B" }, { "b" : "3FFF83720000", "path" : "/usr/lib64/sasl2/liblogin.so", "elfType" : 3, "buildId" : "590B22AB5E7B5B869476DC9919CB77F27D54E8B2" }, { "b" : "3FFF836F0000", "path" : "/usr/lib64/sasl2/libplain.so", "elfType" : 3, "buildId" : "CCEAF9D66D80C02F98FB3F428A528C8EC1F62AA3" } ] }}
      d20263|  mongod(_ZN5mongo15printStackTraceERSo+0x80) [0x275bb810]
      d20263|  mongod(+0x292A634) [0x275ba634]
      d20263|  mongod(+0x292AE98) [0x275bae98]
      d20263|  (__kernel_sigtramp_rt64+0x0) [0x3fff85650478]
      d20263|  mongod(_ZN5mongo19KeysCollectionCache7refreshEPNS_16OperationContextE+0x128) [0x26f1bab8]
      d20263|  mongod(+0x2286210) [0x26f16210]
      d20263|  mongod(_ZN5mongo21KeysCollectionManager14PeriodicRunner18_doPeriodicRefreshEPNS_14ServiceContextENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEENS_8DurationISt5ratioILl1ELl1000EEEE+0x17C) [0x26f1977c]
      d20263|  mongod(+0x228A7CC) [0x26f1a7cc]
      d20263|  mongod(+0x2A6EA24) [0x276fea24]
      d20263|  libpthread.so.0(+0x8944) [0x3fff84858944]
      d20263|  libc.so.6(clone+0x98) [0x3fff84787640]
      d20263| -----  END BACKTRACE  -----
      

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: