SERVER-33449 Seg fault at HMAC keys background thread during rollback